--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -4,11 +4,11 @@
 <dict>
   <key>URL</key>
   <dict>
-    <key>Enigma2</key>
+    <key>DreamboxServer</key>
     <dict>
       <key>URLPatterns</key>
       <array>
-        <string>([0-9.]*)?/([0-9]*/)*([0-9 A-F:])*</string>
+        <string>http://127.0.0.1:9090/Feeds</string>
       </array>
     </dict>
   </dict>
